src/test/test-models/bad/data_index/non_data_index11.stan
parameters {
  real y[3];

}
transformed parameters {
  cholesky_factor_cov[3, size(y)] z;
}
